update RO notebook

--- a/analysis/rondonia_experiment_pixel-based.ipynb
+++ b/analysis/rondonia_experiment_pixel-based.ipynb
@@ -93,7 +93,7 @@
     "y <- \"2022\"\n",
     "\n",
     "# Cube directory\n",
-    "cube_dir <- \"../data/output/cube/\"\n",
+    "cube_dir <- \"../data/output/RO/cube/\"\n",
     "\n",
     "# Bands\n",
     "cube_bands <- c(\n",
@@ -234,7 +234,7 @@
     "samples_file <- \"../data/raw/samples/samples.rds\"\n",
     "\n",
     "# Output directory\n",
-    "base_output_dir <- \"../data/output/\"\n",
+    "base_output_dir <- \"../data/output/RO/\"\n",
     "\n",
     "#\n",
     "# 1. Load samples\n",
@@ -1948,7 +1948,7 @@
    ],
    "source": [
     "# tuned directory\n",
-    "tuning_dir <- \"../data/output/tune/tempcnn/\"\n",
+    "tuning_dir <- \"../data/output/RO/tune/tempcnn/\"\n",
     "dir.create(tuning_dir, recursive = TRUE)\n",
     "\n",
     "saveRDS(tuned_tempcnn, paste0(tuning_dir, \"tempcnn_ro.rds\"))"
@@ -1963,7 +1963,7 @@
    },
    "outputs": [],
    "source": [
-    "tuned_tempcnn <- readRDS(\"../data/output/tune/tempcnn/tempcnn_ro.rds\")"
+    "tuned_tempcnn <- readRDS(\"../data/output/RO/tune/tempcnn/tempcnn_ro.rds\")"
    ]
   },
   {
@@ -2707,7 +2707,7 @@
     "# 3. Save model\n",
     "#\n",
     "\n",
-    "base_model_dir <- \"../data/output/model/\"\n",
+    "base_model_dir <- \"../data/output/RO/model/\"\n",
     "\n",
     "tcnn_dir <- paste0(base_model_dir, \"tcnn_model.rds\")  \n",
     "\n",
@@ -2727,7 +2727,7 @@
    },
    "outputs": [],
    "source": [
-    "tcnn_model <- readRDS(\"../data/output/model/tcnn_model.rds\")"
+    "tcnn_model <- readRDS(\"../data/output/RO/model/tcnn_model.rds\")"
    ]
   },
   {
@@ -2779,7 +2779,7 @@
    "outputs": [],
    "source": [
     "# tuned directory\n",
-    "tuning_dir <- \"../data/output/tune/lighttae/\"\n",
+    "tuning_dir <- \"../data/output/RO/tune/lighttae/\"\n",
     "dir.create(tuning_dir, recursive = TRUE)\n",
     "\n",
     "saveRDS(tuned_lighttae, paste0(tuning_dir, \"lighttae_ro.rds\"))"
@@ -2794,7 +2794,7 @@
    },
    "outputs": [],
    "source": [
-    "tuned_lighttae <- readRDS(\"../data/output/tune/lighttae/lighttae_ro.rds\")"
+    "tuned_lighttae <- readRDS(\"../data/output/RO/tune/lighttae/lighttae_ro.rds\")"
    ]
   },
   {
@@ -3574,7 +3574,7 @@
    },
    "outputs": [],
    "source": [
-    "lighttae_model <- readRDS(\"../data/output/model/ltae_model.rds\")"
+    "lighttae_model <- readRDS(\"../data/output/RO/model/ltae_model.rds\")"
    ]
   },
   {
@@ -3619,7 +3619,7 @@
    ],
    "source": [
     "# Output directory\n",
-    "output_dir <- \"../data/output/classifications/tccn\"\n",
+    "output_dir <- \"../data/output/RO/classifications/tccn\"\n",
     "\n",
     "# Version\n",
     "results_version <- \"tcnn-8cls\"\n",
@@ -3727,7 +3727,7 @@
    ],
    "source": [
     "# Output directory\n",
-    "output_dir <- \"../data/output/classifications/lighttae\"\n",
+    "output_dir <- \"../data/output/RO/classifications/lighttae\"\n",
     "\n",
     "# Version\n",
     "results_version <- \"lighttaeb-8cls\"\n",
