--- a/analysis/rondonia_experiment_pixel-based.ipynb
+++ b/analysis/rondonia_experiment_pixel-based.ipynb
@@ -2,6 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "2b71f8aa-53fd-4876-8b50-e0be5830b830",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading GitHub repo oldlipe/sits@feat/dev-sits\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m──\u001b[39m \u001b[36mR CMD build\u001b[39m \u001b[36m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[32m✔\u001b[39m  \u001b[90mchecking for file ‘/tmp/Rtmp6yo18F/remotes8a70861cb1af2/OldLipe-sits-8c61eeb/DESCRIPTION’\u001b[39m\u001b[36m\u001b[39m\n",
+      "\u001b[90m─\u001b[39m\u001b[90m  \u001b[39m\u001b[90mpreparing ‘sits’:\u001b[39m\u001b[36m\u001b[39m\n",
+      "\u001b[32m✔\u001b[39m  \u001b[90mchecking DESCRIPTION meta-information\u001b[39m\u001b[36m\u001b[39m\n",
+      "\u001b[90m─\u001b[39m\u001b[90m  \u001b[39m\u001b[90mcleaning src\u001b[39m\u001b[36m\u001b[39m\n",
+      "\u001b[90m─\u001b[39m\u001b[90m  \u001b[39m\u001b[90mchecking for LF line-endings in source and make files and shell scripts\u001b[39m\u001b[36m\u001b[39m\n",
+      "\u001b[90m─\u001b[39m\u001b[90m  \u001b[39m\u001b[90mchecking for empty or unneeded directories\u001b[39m\u001b[36m\u001b[39m\n",
+      "\u001b[90m─\u001b[39m\u001b[90m  \u001b[39m\u001b[90mbuilding ‘sits_1.5.2.tar.gz’\u001b[39m\u001b[36m\u001b[39m\n",
+      "   \n",
+      "\r"
+     ]
+    }
+   ],
+   "source": [
+    "devtools::install_github(\"oldlipe/sits@feat/dev-sits\", upgrade = FALSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "42d98bbb-eb8f-4603-aae2-3d78f260cc1b",
    "metadata": {
@@ -14,9 +51,12 @@
      "text": [
       "SITS - satellite image time series analysis.\n",
       "\n",
-      "Loaded sits v1.5.1.\n",
+      "Loaded sits v1.5.2.\n",
       "        See ?sits for help, citation(\"sits\") for use in publication.\n",
       "        Documentation avaliable in https://e-sensing.github.io/sitsbook/.\n",
+      "\n",
+      "Important: Please read \"Release Notes for SITS 1.5.2\" in\n",
+      "                https://github.com/e-sensing/sits.\n",
       "\n"
      ]
     }
@@ -162,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4eb0d7dd-39bc-4084-b6d2-f27b227eb709",
    "metadata": {
     "tags": []
@@ -2720,7 +2760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "c2730663-dcbd-440a-bcb3-c01e08ed785a",
    "metadata": {
     "tags": []
@@ -2787,7 +2827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6a0ecfb5-b855-4d5f-b93d-286d8a942b7a",
    "metadata": {
     "tags": []
@@ -3567,7 +3607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "14c48ec5-1f46-4dee-b8e8-f0d60e2508d5",
    "metadata": {
     "tags": []
@@ -3784,7 +3824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "023fe197-6c7c-4393-ab20-366568c5896d",
    "metadata": {
     "tags": []
@@ -3831,26 +3871,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in dir.create(output_dir, recursive = TRUE):\n",
-      "“'../data/output/RO/segment/tcnn' already exists”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  |======================================================================| 100%\n",
-      "  |======================================================================| 100%\n",
-      "  |======================================================================| 100%\n",
-      "  |======================================================================| 100%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Output directory\n",
     "output_dir <- \"../data/output/RO/segment/tcnn\"\n",
@@ -3870,7 +3891,7 @@
     "    data       = segments,\n",
     "    ml_model   = tcnn_model,\n",
     "    n_sam_pol  = 40,\n",
-    "    memsize    = 30,\n",
+    "    memsize    = 8,\n",
     "    gpu_memory = 10,\n",
     "    multicores = 24,\n",
     "    output_dir = output_dir,\n",
@@ -4428,7 +4449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "38864f63-3fd2-4110-9777-cfca2b8f380e",
    "metadata": {
     "tags": []
@@ -4469,8 +4490,6 @@
    "source": [
     "samples_val <- sf::st_read(\"../data/raw/RO/validation/validation_pts.gpkg\")\n",
     "\n",
-    "print(samples_val)samples_val <- sf::st_read(\"../data/raw/RO/validation/validation_pts.gpkg\")\n",
-    "\n",
     "print(samples_val)"
    ]
   },
@@ -4486,7 +4505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "cdd6492e-9286-42ab-86df-a928df8a2bdc",
    "metadata": {
     "tags": []
@@ -4979,7 +4998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "8b98ab96-185a-4359-b01e-0a5f041e7ee2",
    "metadata": {
     "tags": []
@@ -5006,7 +5025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "id": "259afe51-33e0-4124-a308-8e15121515b7",
    "metadata": {
     "tags": []
@@ -5031,7 +5050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "id": "ac7078bf-0377-4edd-9d35-32d6678ed8a4",
    "metadata": {
     "tags": []
@@ -5043,7 +5062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "a6e557e8-e06d-4318-b2b9-6e4368088e03",
    "metadata": {
     "tags": []
@@ -5061,7 +5080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "id": "bfc26d4c-7bb1-4a21-80e1-b2f91a5776ab",
    "metadata": {
     "tags": []
@@ -5112,7 +5131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "id": "11eea2a3-b5b2-403f-bce3-a11c24b37f02",
    "metadata": {
     "tags": []
@@ -5136,7 +5155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "id": "2e4f01d8-0b75-40c9-a02e-17c6161e5262",
    "metadata": {
     "tags": []
@@ -5159,7 +5178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "id": "b586e869-8fa4-4176-8d0f-718e99d3d6d7",
    "metadata": {
     "tags": []
@@ -5174,7 +5193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "id": "d68fd226-e122-4fa4-b41c-af7ac693e845",
    "metadata": {
     "tags": []
@@ -5196,11 +5215,11 @@
        "\n",
        "Mapped Area x Estimated Area (ha)\n",
        "                Mapped Area (ha) Error-Adjusted Area (ha) Conf Interval (ha)\n",
-       "Bare_Soil              203056.38               1458497.50          227734.99\n",
-       "Burned_Areas            55581.03                323889.60          124199.90\n",
-       "Highly_Degraded          9382.77                314832.02          126967.37\n",
-       "forest                 361199.97               2331380.29          233679.41\n",
-       "water                 3831323.85                 31944.59           30335.47"
+       "Bare_Soil              204999.12               1448123.18          226423.95\n",
+       "Burned_Areas            55976.49                321967.10          123429.31\n",
+       "Highly_Degraded          9496.80                312573.19          126079.92\n",
+       "forest                 360532.53               2342758.84          233125.80\n",
+       "water                 3829539.06                 35121.69           34310.06"
       ]
      },
      "metadata": {},
